Add user controller tests
